--- a/css/style.sass
+++ b/css/style.sass
@@ -3,6 +3,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap')
+@font-face 
+    font-family: 'Arial'
+    src: local('../fonts/Arial Regular'), local('../fonts/Arial-Regular'), url('../fonts/ArialMT.woff2') format('woff2'),  url('../fonts/ArialMT.woff') format('woff'),  url('../fonts/ArialMT.ttf') format('truetype')
+
+    font-style: normal
+@font-face 
+    font-family: 'Arial Italic'
+    src: local('../fonts/Arial Italic'), local('../fonts/Arial-Italic'), url('../fonts/Arial-ItalicMT.woff2') format('woff2'), url('../fonts/Arial-ItalicMT.woff') format('woff'), url('Arial-ItalicMT.ttf') format('truetype')
+    font-weight: normal
+    font-style: italic
+@font-face 
+    font-family: 'Arial Black'
+    src: url('../fonts/Arial-Black.eot')
+    src: url('../fonts/Arial-Black.eot?#iefix') format('embedded-opentype'), url('../fonts/Arial-Black.woff') format('woff'), url('../fonts/Arial-Black.ttf') format('truetype')
+    font-weight: normal
+    font-style: normal
+
+  
 *
     box-sizing: border-box
     padding: 0
@@ -70,28 +89,7 @@ $brightBlue: #0064f9
     display: none
 .no-form-tablet
     display: block
-video
-    position: relative
-.video-play
-        top: 50%
-        left: 50%                    
-        transform: translate(-50%, -150%) 
-        background-color: rgba(43,51,63,.7)
-        width: 86px
-        height: 41px
-        position: absolute
-        border: .06666em solid #fff
-        border-radius: .3em
-        transition: all .4s
-.video-play:hover
-        background-color: #696e76b3
-.video-play::before
-    content: ''
-    position: absolute /* Абсолютное позиционирование */
-    left: 35px
-    bottom: 8px /* Положение треугольника */
-    border: 10px solid transparent
-    border-left: 14px solid #fff
+
 
 .modal-wrap
     display: none
@@ -188,12 +186,105 @@ video
         width: 630px
         &-top
             text-align: right
+            margin-top: 20px
+            margin-bottom: -40px
         &__title
-            font-family: Arial
-            font-style: italic
-            font-weight: normal
-            font-size: 89px
-            line-height: 127.6%
+            font-family: 'Arial Italic'
+            font-size: 30px
+            color: #242458
+            line-height: .8
+            letter-spacing: 0.05em
+            text-transform: uppercase
+        h1
+            font-family: 'Arial Black'
+            font-size: 75px
+            line-height: .6
+            text-align: center
+            letter-spacing: -0.01em
+            text-transform: uppercase
+            color: #EC000D
+        h2
+            font-family: 'Arial Black'
+            line-height: .8
+            font-size: 75px
+            letter-spacing: -0.01em
+            text-transform: uppercase
+            color: #FFF910
+            text-shadow: 0px 0px 5px #0085FF
+        &__subtitle
+            font-family: 'Arial Italic'
+            font-size: 26px
+            line-height: 1
+            color: #242458
+            letter-spacing: 0.05em
+            text-transform: uppercase
+        &-center
+            display: flex
+            margin-left: 60px
+            img
+                height: 340px
+                position: relative
+                z-index: 2
+        &__list
+            margin-left: -60px
+            margin-top: 30px
+            position: relative
+            z-index: 1
+        .list-item
+            background-image: url('../img/first-screen/list-item-bg.png')  
+            background-repeat: no-repeat
+            background-position: 100% auto
+            background-size: contain
+            color: #21211F
+            text-align: left
+            padding-left: 100px
+            width: 450px
+            .mark
+                height: 50px
+        &__text
+            width: 250px
+            padding-top: 5px
+            padding-bottom: 12px
+            
+            h3
+                letter-spacing: 0.02em
+                text-transform: uppercase
+                font-size: 30px
+                font-weight: 500
+                font-family: 'Bebas Neue', cursive
+                font-style: italic
+                margin: 0
+            p
+                
+                font-family: 'Oswald', sans-serif
+                font-style: italic
+                font-size: 12px
+                font-weight: 500
+                margin: 0
+        &-bottom
+            background-image: url('../img/first-screen/arrow.png')
+            background-repeat: no-repeat
+            background-size: cover
+            width: 530px
+            margin-left: 100px
+            text-transform: uppercase
+            color: #030370
+            text-align: left
+            padding-left: 40px
+            margin-top: -25px
+
+            .upper-text
+                font-family: 'Oswald', sans-serif
+                font-size: 38px
+                font-weight: 600
+                margin: 0
+            .lower-text
+                font-family: 'Oswald', sans-serif
+                font-size: 28px
+                font-weight: 400
+                line-height: 1
+                padding-bottom: 10px
+                
     .first-screen-mob
         display: none
 /*header (bottom)*/  
@@ -219,6 +310,8 @@ video
     margin: 0 0 15px -25px
     background: #fff
     border-radius: 20px 20px 0 0
+    position: relative
+    z-index: 3
     &__header
         text-align: center
         font-size: 1.4rem
@@ -302,10 +395,14 @@ video
     &__title
         max-width: 504px
         margin: 0 auto
-        img
-            width: 100%
+        h2
+            text-align: center
+            color: #E80A03
+            font-family: 'Oswald', sans-serif
+            font-weight: 700
+            font-size: 66px
     &__subtitle h3
-        color: $orange
+        color: #0768F9
         font-size: 1.4rem
         font-weight: 700 
         font-family: 'Oswald', sans-serif
@@ -324,14 +421,13 @@ video
        
 /*section About Product*/  
 .about-product
-    background-color: #6dcff6
     padding-top: 50px
     padding-bottom: 50px
     color: #06407D
     &__content
         width: 535px
     &__title
-        color: #fff
+        color: #FF7043
         font-size: 1.8rem  
         font-weight: 700 
         font-family: 'Oswald', sans-serif
@@ -346,14 +442,10 @@ video
         font-family: 'Arimo', sans-serif
         span
             text-decoration: underline
-            font-weight: 700
         &:last-child
            font-weight: 700 
-    .magzine-men_fin
-        margin-top: 30px
-        margin-left: 70px
-    .main-btn-wrap
-        margin-left: 70px
+    .magzine
+        width: 90%
     
 /*blue title*/
 .blue-title
@@ -414,8 +506,8 @@ video
                 
 /*section  How It Works?*/
 .how-it-works
-    background: url('../img/bg/bg1.jpg') no-repeat center center
-    background-size: cover
+    background: url('../img/bg/bg1.jpg') no-repeat 100%
+    background-size: contain
     padding: 40px 0 10px
     &_bg-mob
         display: none  
@@ -424,13 +516,13 @@ video
     &__title
         line-height: 1.2em
         font-size: 2.33rem
-        font-weight: 300
+        font-weight: 700
         color: #28598E
-        font-family: 'Arimo', sans-serif
+        font-family: 'Oswald', sans-serif
         span
-            color: $brightBlue
-            font-weight: 700
-            font-family: "Roboto",sans-serif
+            font-family: 'Oswald', sans-serif
+            color: #E80A03
+            
     &__text
         color: #0e437e
         font-size: 1rem
@@ -459,27 +551,7 @@ video
                 font-size: 0.85rem
                 font-weight: 700 !important
                 margin-bottom: 5px
-/*section Q&A*/        
-.q-and-a
-    padding: 30px 0
-    margin-bottom: -30px
-    background-color:  rgb(242, 249, 255)
-    .container
-        display: grid
-        display: -ms-grid
-        gap: 10px
-        grid-template-columns: 8fr 1fr 
-        -ms-grid-columns: 8fr 10px 1fr 
-    &__content
-        color: #376496
-        font-size: 1.4rem
-        line-height: 1.4em
-        font-family: 'Arimo', sans-serif
-        .orange-text
-            color: $orange
-            font-weight: 600
-            font-family: arial
-   
+
 
 /*section What to expect*/
 .what-to-expect
@@ -487,24 +559,68 @@ video
     background-image: url('../img/bg/bg2.jpg')
     background-repeat:  no-repeat
     background-position: center center
-    background-size: 100% 100%
-    .container
-        display: none
-    &__bg-mob
-        display: none
+    background-size: auto 100%
+    position: relative
+    z-index: 1
+    margin-bottom: -70px
+    max-height: 600px
+    .what-to-expect__content
+        max-width: 360px
+        margin-left: auto
+        margin-right: 0
+    &__title
+        color: #F22384
+        font-family: 'Oswald', sans-serif
+        font-weight: 700
+    &__subtitle
+        font-family: 'Oswald', sans-serif
+        font-weight: 500
+        font-size: 32px
+    &__upper-text
+        color: #83C407
+        font-size: 20px
+    &__lower-text
+        font-size: 21.5px
+        font-family: 'Arial', sans-serif
+        display: block
+        margin-left: 30px
+        span
+            font-weight: 700
+            font-style: normal
+        b
+            margin-left: auto
+            display: block
+            font-size: 26px
+            font-weight: normal
+       
+    &__list
+        width: fit-content
+        margin: 10px auto
+        line-height: 1 !important
+        li
+            min-width: 200px
+            position: relative
+            list-style-image: url('../img/list-marker/check.jpg')
+            margin: 15px 0
+            span
+                font-family: 'Arial', sans-serif
+                font-weight: 600
+                font-size: 22px
+                
+                
+       
 
 /*section HAIR RESCUE RX*/
 .hair-rescue
-    padding-bottom: 40px
-    color: #3d3d3d
-    font-size: 31px
-    font-family: 'Arimo', sans-serif
-    font-weight: 400
-    .orange-text
-        font-weight: 600
-        color: $orange
-    .blue-text
-        color: $brightBlue
+
+    padding: 50px 0
+    background: #6DCFF6
+    color: #fff
+    font-size: 1.1rem
+    font-family: 'Oswald', sans-serif
+    font-weight: 700
+
+
 /*section about efficiency*/
 .about-efficiency
     padding: 70px 0
@@ -1020,9 +1136,9 @@ video
         
         &__content
             width: 441px
-        .magzine-men_fin
-            width: 498px
-            margin-left: 50px
+    .magzine
+        width: 498px !important
+        margin-left: 50px
    
     .real-stories
         .video-wrap
@@ -1053,27 +1169,7 @@ video
         display: none
     
     
-       
-    .main-form
 
-        width: 282px  
-        margin: 50px 0 0 -75px
-        input, select
-            width: 232px
-            margin-left: auto
-            margin-right: auto
-        .for-form
-            width: 210px
-    .h-top 
-        background-image: none !important
-        background-color: #ebf5ff 
-        background-position: 100% 100%
-        .for-tablet
-            top: 0
-            position: absolute
-            z-index: 1
-        .first-screen-main
-            display: none
     .h-bottom
         padding-top: 50px
             
@@ -1102,56 +1198,7 @@ video
         
     .hair-rescue
         margin-top: -100px
-    .what-to-expect
-        background-image: url('../img/bg/WhatToExpect.png')
-        background-size: cover
-        margin-bottom: -30px
-        position: relative
-
-        &__subtitle
-            display: none
-        &__list
-            width: fit-content
-            margin: 10px auto
-            line-height: 1 !important
-            li
-                min-width: 200px
-                position: relative
-                span
-                    font-family: 'Arimo', sans-serif
-                    font-weight: 600
-                    font-size: 22px
-                    color: #0e437e 
-                
-                    list-style-image: url('../img/list-marker/check mark white no bkr.png')
-        .container
-            display: block
-            width: 450px
-            position: absolute
-            right: 0
-            top: 170px
-            p
-                
-                font-size: 21.5px
-                font-family: 'Arimo', sans-serif
-                color: #0e437e 
-                width: 370px
-                display: block
-                span
-                    font-weight: 700
-                    font-style: normal
-                b
-                    width: 320px
-                    margin-left: auto
-                    display: block
-                    font-size: 26px
-                    font-weight: normal
-                    font-style: italic
-
-            h2
-                display: none
-            img
-                display: none
+    
     .pharmacist-recommended​
         &__text
             br
@@ -1231,9 +1278,6 @@ video
                 font-size:  0.83rem
                 span
                     font-size: 1.30rem
-    .what-to-expect
-        img
-            width: 100%
     .feedback-wrap
             grid-template-columns: 1fr
             justify-content: center 
@@ -1306,7 +1350,7 @@ video
         margin: 0 auto
         &__content
             width: 441px
-        .magzine-men_fin
+        .magzine
             margin-left: 150px
     
         .container
@@ -1360,69 +1404,7 @@ video
             margin: 15px auto
         &__title
             display: block !important
-    .hair-rescue
-        display: none
-    .what-to-expect
-        background-image: none !important
-        background-color: rgb(109, 207, 246)
-        height: auto !important
-        padding: 40px 0
-        position: static
-        .container
-            display: block
-            position: static !important
-            width: 100% !important
-            h2
-                display: block !important
-            img
-                display: block !important
-                width: 100%
-                margin: 0 auto
-        &__title    
-            color: #fff    
-            font-family: 'Oswald', sans-serif
-            font-size: 2.33rem
-            line-height: 1.4em
-            font-weight: 600
-            text-align: center
-            display: block
-        &__subtitle
-            display: block !important
-            text-align: center
-            font-size: 1.6rem
-            font-family: 'Arimo', sans-serif
-            color: #0e437e
-            font-style: italic
- 
-        p
-            width: 100% !important
-            font-size: 0.8rem
-            font-family: 'Arimo', sans-serif
-            color: #0e437e
-            margin: 0
-            b
-                font-family: 'Roboto', sans-serif
-                color: #4B6A71
-                font-size: 1rem
-                margin-left: 0 !important
-                br
-                    display: none
-        &__list
-            margin-left: 50px !important
-            
-            li
-                list-style-image: url('../img/list-marker/marker2.jpg') !important
-                font-size: 20px
-                font-family: 'Arimo', sans-serif
-                font-weight: 500  
-                color: #353535
-                padding: 10px
-    .what-to-expect
-        &__bg-mob
-            display: block
-            width: 100%
-        .container
-           display: none
+
     .feedback
         &__content
             &-wrap
@@ -1534,7 +1516,7 @@ video
           width: 120% !important
         p
             font-size: 0.95rem
-        .magzine-men_fin
+        .magzine
             margin: 0 auto
             width: 100%
         .main-btn-wrap
